--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,126 @@ body,
 .menu {
   padding-bottom: 2em;
 }
+
+.color__container {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  width: 35px;
+  border-radius: 3px;
+}
+
+.color__square {
+  width: 35px;
+  height: 35px;
+}
+
+.color__overlay {
+  width: 85px;
+  height: 35px;
+  transform: rotate(225deg);
+}
+
+.user__typing {
+  font-style: italic;
+  font-weight: bold;
+  margin-right: 3px;
+}
+
+.typing {
+  width: 5em;
+  height: 2em;
+  position: relative;
+  padding: 10px;
+  margin-left: 5px;
+  background: #e6e6e6;
+  border-radius: 20px;
+}
+
+.typing__dot {
+  float: left;
+  width: 8px;
+  height: 8px;
+  margin: 0 4px;
+  background: #8d8c91;
+  border-radius: 50%;
+  opacity: 0;
+  animation: loadingFade 1s infinite;
+}
+
+.typing__dot:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.typing__dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.typing__dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes loadingFade {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0.8;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.emojipicker {
+  position: absolute;
+}
+
+@media only screen and (max-width: 991px) {
+
+  html,
+  body,
+  .app {
+    padding: 0 !important;
+  }
+
+  .ui.menu {
+    border: none !important;
+  }
+
+  .ui.header {
+    margin: 0;
+  }
+
+  .ui.segment {
+    margin: 0 !important;
+    border-radius: 0 !important;
+  }
+
+  .ui.header>.icon {
+    margin-top: 0.55em;
+  }
+
+  .message__form {
+    margin-left: 0 !important;
+    bottom: 0 !important;
+    right: 0 !important;
+  }
+
+  h2 {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+  }
+
+  .ui.menu {
+    margin: 0 !important;
+  }
+
+  .menu {
+    padding-bottom: 0 !important;
+  }
+}
